# image-prompt-lab-gallery

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  README_zh.md
.github/: release.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: imglab-daemon-aarch64-apple-darwin  imglab-daemon-x86_64-unknown-linux-gnu
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: app_logs.rs  automation_daemon.rs  daemon_client.rs  errors.rs  lib.rs  main.rs  metadata_generation.rs  paths.rs  services.rs  tests.rs  view_mappers.rs  views.rs
apps/desktop/src-tauri/src/commands/: albums.rs  daemon.rs  gallery.rs  generation.rs  library.rs  logs.rs  metadata.rs  mod.rs  prompts.rs  review.rs  updater.rs
crates/imglab-cli/: Cargo.toml
crates/imglab-cli/src/: main.rs
crates/imglab-cli/tests/: cli_commands.rs
crates/imglab-core/: Cargo.toml
crates/imglab-core/src/: compatibility.rs  dto.rs  error.rs  hash.rs  lib.rs  library.rs  provider.rs  services.rs  task_scheduler.rs
crates/imglab-core/src/application/: facade.rs  mod.rs  testing.rs
crates/imglab-core/src/application/ports/: mod.rs  providers.rs  repositories.rs  runtime.rs  storage.rs
crates/imglab-core/src/application/read_models/: mod.rs
crates/imglab-core/src/application/use_cases/: albums.rs  assets.rs  generation.rs  library.rs  metadata_review.rs  mod.rs  prompts.rs  schedules.rs  tasks.rs
crates/imglab-core/src/domain/: mod.rs
crates/imglab-core/src/domain/album/: model.rs  policies.rs
crates/imglab-core/src/domain/asset/: mod.rs  model.rs  policies.rs
crates/imglab-core/src/domain/generation/: model.rs  policies.rs
crates/imglab-core/src/domain/metadata_review/: model.rs  policies.rs
crates/imglab-core/src/domain/prompt/: model.rs  policies.rs
crates/imglab-core/src/domain/schedule/: mod.rs  model.rs  policies.rs
crates/imglab-core/src/domain/shared/: identity.rs
crates/imglab-core/src/domain/task/: model.rs  policies.rs
crates/imglab-core/src/infrastructure/: composition.rs  mod.rs
crates/imglab-core/src/infrastructure/filesystem/: mod.rs
crates/imglab-core/src/infrastructure/registry/: mod.rs
crates/imglab-core/src/infrastructure/sqlite/: albums.rs  assets.rs  gallery.rs  generation.rs  library.rs  metadata.rs  mod.rs  prompts.rs  schedules.rs  schema.rs  search.rs  tasks.rs
crates/imglab-core/src/interface_contracts/: dto.rs
crates/imglab-daemon/: Cargo.toml
crates/imglab-daemon/src/: executors.rs  lib.rs  logs.rs  main.rs  routes.rs  runtime.rs  runtime_io.rs  scheduler.rs  task_dto.rs  tests.rs  transport.rs  views.rs
crates/imglab-daemon/src/tests/: api.rs  recovery.rs  scheduler.rs
docs/: PERFORMANCE_CLEANUP_STATUS.md  PERFORMANCE_REVIEW.md  PERFORMANCE_SQLITE_CHECKPOINT.md  ddd-domain-complexity-review.md  ddd-refactor-baseline-contracts.md  development.md  providers.md  release.md
openspec/: config.yaml
scripts/: check-architecture.sh  sqlite-workload-smoke.sh
(+421 files in other folders)
