[package]
name = "imglab-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "imglab"
path = "src/main.rs"

[dependencies]
imglab-core = { path = "../imglab-core" }
imglab-provider-codex = { path = "../imglab-provider-codex" }
serde_json = "1.0.149"
