[package]
name = "imglab-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "imglab-daemon"
path = "src/main.rs"

[dependencies]
imglab-core = { path = "../imglab-core" }
imglab-provider-codex = { path = "../imglab-provider-codex" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
