[package]
name = "imglab-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
imglab-core = { path = "../../../crates/imglab-core" }
imglab-provider-codex = { path = "../../../crates/imglab-provider-codex" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[lib]
name = "imglab_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
